--- a/NetworkInterface/NetworkInterface/App.xaml
+++ b/NetworkInterface/NetworkInterface/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="NetworkInterface.App"
+﻿<Application x:Class="Network.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
