--- a/NetworkInterface/TestProject/MainWindow.xaml
+++ b/NetworkInterface/TestProject/MainWindow.xaml
@@ -3,6 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="200" Width="200">
     <Grid>
-        
-    </Grid>
+		<Button x:Name="btnStartTask" Content="Start Task" HorizontalAlignment="Left" Margin="58,30,0,0" VerticalAlignment="Top" Width="75" Click="btnStartTask_Click"/>
+		<Button x:Name="btnCancelTask" Content="Cancel Task" HorizontalAlignment="Left" Margin="58,73,0,0" VerticalAlignment="Top" Width="75" Click="btnCancelTask_Click"/>
+		<Button x:Name="btnShowTaskStatus" Content="Task Status" HorizontalAlignment="Left" Margin="58,115,0,0" VerticalAlignment="Top" Width="75" Click="btnShowTaskStatus_Click"/>
+
+	</Grid>
 </Window>
