--- a/NetworkInterface/MessageRelaySystem/MainWindow.xaml
+++ b/NetworkInterface/MessageRelaySystem/MainWindow.xaml
@@ -1,8 +1,21 @@
 ﻿<Window x:Class="MessageRelaySystem.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+        Title="MainWindow" Height="500" Width="600">
+	<Grid>
+		<Label Content="Nick:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+		<TextBox x:Name="txtNick" HorizontalAlignment="Left" Height="23" Margin="51,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="107"/>
+		<Label Content="Remote:" HorizontalAlignment="Left" Margin="172,10,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="cbFirstIP" HorizontalAlignment="Left" Margin="231,10,0,0" VerticalAlignment="Top" Width="37"/>
+		<Label Content="." HorizontalAlignment="Left" Margin="266,15,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="cbSecondIP" HorizontalAlignment="Left" Margin="277,9,0,0" VerticalAlignment="Top" Width="37"/>
+		<Label Content="." HorizontalAlignment="Left" Margin="312,14,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="cbThirdIP" HorizontalAlignment="Left" Margin="324,9,0,0" VerticalAlignment="Top" Width="37"/>
+		<Label Content="." HorizontalAlignment="Left" Margin="359,14,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="cbFourthIP" HorizontalAlignment="Left" Margin="368,9,0,0" VerticalAlignment="Top" Width="37"/>
+		<Button x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="75"/>
+		<Button x:Name="btnStop" Content="Stop" HorizontalAlignment="Left" Margin="90,41,0,0" VerticalAlignment="Top" Width="75"/>
+		<Button x:Name="btnRemoteConnect" Content="Connect " HorizontalAlignment="Left" Margin="330,41,0,0" VerticalAlignment="Top" Width="75"/>
+
+	</Grid>
 </Window>
