--- a/NetworkInterface/MessageRelaySystem/MainWindow.xaml
+++ b/NetworkInterface/MessageRelaySystem/MainWindow.xaml
@@ -25,6 +25,9 @@
 				</LinearGradientBrush>
 			</TextBox.BorderBrush>
 		</TextBox>
+		<TextBox x:Name="txtMessage" HorizontalAlignment="Left" Height="54" Margin="10,382,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="395" AcceptsReturn="True"/>
+		<Button x:Name="btnSend" Content="Send" HorizontalAlignment="Left" Margin="10,441,0,0" VerticalAlignment="Top" Width="75"/>
+		<TextBox x:Name="txtBuddyList" HorizontalAlignment="Left" Height="423" Margin="418,13,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="161" IsReadOnly="True"/>
 
 	</Grid>
 </Window>
