--- a/NetworkInterface/MessageRelaySystem/MainWindow.xaml
+++ b/NetworkInterface/MessageRelaySystem/MainWindow.xaml
@@ -13,7 +13,7 @@
 		<ComboBox x:Name="cbThirdIP" HorizontalAlignment="Left" Margin="324,9,0,0" VerticalAlignment="Top" Width="37"/>
 		<Label Content="." HorizontalAlignment="Left" Margin="359,14,0,0" VerticalAlignment="Top"/>
 		<ComboBox x:Name="cbFourthIP" HorizontalAlignment="Left" Margin="368,9,0,0" VerticalAlignment="Top" Width="37"/>
-		<Button x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="75"/>
+		<Button x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="75" Click="btnStart_Click"/>
 		<Button x:Name="btnStop" Content="Stop" HorizontalAlignment="Left" Margin="90,41,0,0" VerticalAlignment="Top" Width="75"/>
 		<Button x:Name="btnRemoteConnect" Content="Connect " HorizontalAlignment="Left" Margin="330,41,0,0" VerticalAlignment="Top" Width="75"/>
 		<TextBox x:Name="txtChatWindow" HorizontalAlignment="Left" Height="309" Margin="10,68,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="395" VerticalScrollBarVisibility="Auto" IsReadOnly="True" IsReadOnlyCaretVisible="True">
@@ -28,6 +28,7 @@
 		<TextBox x:Name="txtMessage" HorizontalAlignment="Left" Height="54" Margin="10,382,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="395" AcceptsReturn="True"/>
 		<Button x:Name="btnSend" Content="Send" HorizontalAlignment="Left" Margin="10,441,0,0" VerticalAlignment="Top" Width="75"/>
 		<TextBox x:Name="txtBuddyList" HorizontalAlignment="Left" Height="423" Margin="418,13,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="161" IsReadOnly="True"/>
+		<TextBlock x:Name="txtStatus" HorizontalAlignment="Left" Margin="115,444,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="464"/>
 
 	</Grid>
 </Window>
