--- a/NetworkInterface/MessageRelaySystem/MainWindow.xaml
+++ b/NetworkInterface/MessageRelaySystem/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MessageRelaySystem.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="500" Width="600">
+        Title="MainWindow" Height="510" Width="600">
 	<Grid>
 		<Label Content="Nick:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
 		<TextBox x:Name="txtNick" HorizontalAlignment="Left" Height="23" Margin="51,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="107"/>
@@ -27,8 +27,8 @@
 		</TextBox>
 		<TextBox x:Name="txtMessage" HorizontalAlignment="Left" Height="54" Margin="10,382,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="395" AcceptsReturn="True"/>
 		<Button x:Name="btnSend" Content="Send" HorizontalAlignment="Left" Margin="10,441,0,0" VerticalAlignment="Top" Width="75"/>
-		<TextBox x:Name="txtBuddyList" HorizontalAlignment="Left" Height="423" Margin="418,13,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="161" IsReadOnly="True"/>
 		<TextBlock x:Name="txtStatus" HorizontalAlignment="Left" Margin="115,444,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="464"/>
+		<TextBox x:Name="txtFriendsList" HorizontalAlignment="Left" Height="426" Margin="414,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="169" IsReadOnlyCaretVisible="True" IsReadOnly="True"/>
 
 	</Grid>
 </Window>
