--- a/NetworkInterface/MessageRelaySystem/MainWindow.xaml
+++ b/NetworkInterface/MessageRelaySystem/MainWindow.xaml
@@ -13,7 +13,7 @@
 		<ComboBox x:Name="cbThirdIP" HorizontalAlignment="Left" Margin="324,9,0,0" VerticalAlignment="Top" Width="37"/>
 		<Label Content="." HorizontalAlignment="Left" Margin="359,14,0,0" VerticalAlignment="Top"/>
 		<ComboBox x:Name="cbFourthIP" HorizontalAlignment="Left" Margin="368,9,0,0" VerticalAlignment="Top" Width="37"/>
-		<Button x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="75" Click="btnStart_Click" IsDefault="True"/>
+		<Button x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="75" Click="btnStart_Click" IsDefault="True" IsEnabled="False"/>
 		<Button x:Name="btnStop" Content="Stop" HorizontalAlignment="Left" Margin="90,41,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False" Click="btnStop_Click"/>
 		<Button x:Name="btnRemoteConnect" Content="Connect " HorizontalAlignment="Left" Margin="330,41,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False"/>
 		<TextBox x:Name="txtChatWindow" HorizontalAlignment="Left" Height="309" Margin="10,68,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="395" VerticalScrollBarVisibility="Auto" IsReadOnly="True" IsReadOnlyCaretVisible="True">
