--- a/NetworkInterface/MessageRelaySystem/MainWindow.xaml
+++ b/NetworkInterface/MessageRelaySystem/MainWindow.xaml
@@ -1,22 +1,22 @@
 ﻿<Window x:Class="MessageRelaySystem.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="510" Width="600">
+        Title="MainWindow" Height="510" Width="720">
 	<Grid>
 		<Label Content="Nick:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-		<TextBox x:Name="txtNick" HorizontalAlignment="Left" Height="23" Margin="51,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="107" TextChanged="txtNick_TextChanged"/>
-		<Label Content="Remote:" HorizontalAlignment="Left" Margin="172,10,0,0" VerticalAlignment="Top"/>
-		<ComboBox x:Name="cbFirstIP" HorizontalAlignment="Left" Margin="231,10,0,0" VerticalAlignment="Top" Width="37"/>
-		<Label Content="." HorizontalAlignment="Left" Margin="266,15,0,0" VerticalAlignment="Top"/>
-		<ComboBox x:Name="cbSecondIP" HorizontalAlignment="Left" Margin="277,9,0,0" VerticalAlignment="Top" Width="37"/>
-		<Label Content="." HorizontalAlignment="Left" Margin="312,14,0,0" VerticalAlignment="Top"/>
-		<ComboBox x:Name="cbThirdIP" HorizontalAlignment="Left" Margin="324,9,0,0" VerticalAlignment="Top" Width="37"/>
-		<Label Content="." HorizontalAlignment="Left" Margin="359,14,0,0" VerticalAlignment="Top"/>
-		<ComboBox x:Name="cbFourthIP" HorizontalAlignment="Left" Margin="368,9,0,0" VerticalAlignment="Top" Width="37"/>
+		<TextBox x:Name="txtNick" HorizontalAlignment="Left" Height="23" Margin="51,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="192" TextChanged="txtNick_TextChanged"/>
+		<Label Content="Remote:" HorizontalAlignment="Left" Margin="189,39,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="cbFirstIP" HorizontalAlignment="Left" Margin="243,41,0,0" VerticalAlignment="Top" Width="44"/>
+		<Label Content="." HorizontalAlignment="Left" Margin="283,47,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="cbSecondIP" HorizontalAlignment="Left" Margin="293,41,0,0" VerticalAlignment="Top" Width="44"/>
+		<Label Content="." HorizontalAlignment="Left" Margin="334,46,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="cbThirdIP" HorizontalAlignment="Left" Margin="344,41,0,0" VerticalAlignment="Top" Width="44"/>
+		<Label Content="." HorizontalAlignment="Left" Margin="385,46,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="cbFourthIP" HorizontalAlignment="Left" Margin="394,41,0,0" VerticalAlignment="Top" Width="44"/>
 		<Button x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="75" Click="btnStart_Click" IsDefault="True" IsEnabled="False"/>
 		<Button x:Name="btnStop" Content="Stop" HorizontalAlignment="Left" Margin="90,41,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False" Click="btnStop_Click"/>
-		<Button x:Name="btnRemoteConnect" Content="Connect " HorizontalAlignment="Left" Margin="330,41,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False"/>
-		<TextBox x:Name="txtChatWindow" HorizontalAlignment="Left" Height="309" Margin="10,68,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="395" VerticalScrollBarVisibility="Auto" IsReadOnly="True" IsReadOnlyCaretVisible="True">
+		<Button x:Name="btnRemoteConnect" Content="Connect " HorizontalAlignment="Left" Margin="446,41,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False"/>
+		<TextBox x:Name="txtChatWindow" HorizontalAlignment="Left" Height="309" Margin="10,68,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="516" VerticalScrollBarVisibility="Auto" IsReadOnly="True" IsReadOnlyCaretVisible="True">
 			<TextBox.BorderBrush>
 				<LinearGradientBrush EndPoint="0,20" MappingMode="Absolute" StartPoint="0,0">
 					<GradientStop Color="#FFABADB3" Offset="0.05"/>
@@ -25,10 +25,11 @@
 				</LinearGradientBrush>
 			</TextBox.BorderBrush>
 		</TextBox>
-		<TextBox x:Name="txtMessage" HorizontalAlignment="Left" Height="54" Margin="10,382,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="395" AcceptsReturn="True"/>
+		<TextBox x:Name="txtMessage" HorizontalAlignment="Left" Height="54" Margin="10,382,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="516" AcceptsReturn="True"/>
 		<Button x:Name="btnSend" Content="Send" HorizontalAlignment="Left" Margin="10,441,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False" Click="btnSend_Click"/>
 		<TextBlock x:Name="txtStatus" HorizontalAlignment="Left" Margin="115,444,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="464"/>
-		<TextBox x:Name="txtFriendsList" HorizontalAlignment="Left" Height="426" Margin="414,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="169" IsReadOnlyCaretVisible="True" IsReadOnly="True"/>
+		<TextBox x:Name="txtFriendsList" HorizontalAlignment="Left" Height="426" Margin="531,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="169" IsReadOnlyCaretVisible="True" IsReadOnly="True"/>
+		<Button x:Name="btnChangeNick" Content="Change Nick" HorizontalAlignment="Left" Margin="251,10,0,0" VerticalAlignment="Top" Width="86" IsEnabled="False"/>
 
 	</Grid>
 </Window>
