--- a/NetworkInterface/MessageRelaySystem/MainWindow.xaml
+++ b/NetworkInterface/MessageRelaySystem/MainWindow.xaml
@@ -5,17 +5,17 @@
 	<Grid>
 		<Label Content="Nick:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
 		<TextBox x:Name="txtNick" HorizontalAlignment="Left" Height="23" Margin="51,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="192" TextChanged="txtNick_TextChanged"/>
-		<Label Content="Remote:" HorizontalAlignment="Left" Margin="189,39,0,0" VerticalAlignment="Top"/>
-		<ComboBox x:Name="cbFirstIP" HorizontalAlignment="Left" Margin="243,41,0,0" VerticalAlignment="Top" Width="44"/>
-		<Label Content="." HorizontalAlignment="Left" Margin="283,47,0,0" VerticalAlignment="Top"/>
-		<ComboBox x:Name="cbSecondIP" HorizontalAlignment="Left" Margin="293,41,0,0" VerticalAlignment="Top" Width="44"/>
-		<Label Content="." HorizontalAlignment="Left" Margin="334,46,0,0" VerticalAlignment="Top"/>
-		<ComboBox x:Name="cbThirdIP" HorizontalAlignment="Left" Margin="344,41,0,0" VerticalAlignment="Top" Width="44"/>
-		<Label Content="." HorizontalAlignment="Left" Margin="385,46,0,0" VerticalAlignment="Top"/>
-		<ComboBox x:Name="cbFourthIP" HorizontalAlignment="Left" Margin="394,41,0,0" VerticalAlignment="Top" Width="44"/>
+		<Label Content="Remote:" HorizontalAlignment="Left" Margin="198,39,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="cbFirstIP" HorizontalAlignment="Left" Margin="252,41,0,0" VerticalAlignment="Top" Width="44"/>
+		<Label Content="." HorizontalAlignment="Left" Margin="292,47,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="cbSecondIP" HorizontalAlignment="Left" Margin="302,41,0,0" VerticalAlignment="Top" Width="44"/>
+		<Label Content="." HorizontalAlignment="Left" Margin="343,46,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="cbThirdIP" HorizontalAlignment="Left" Margin="353,41,0,0" VerticalAlignment="Top" Width="44"/>
+		<Label Content="." HorizontalAlignment="Left" Margin="394,46,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="cbFourthIP" HorizontalAlignment="Left" Margin="403,41,0,0" VerticalAlignment="Top" Width="44"/>
 		<Button x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="75" Click="btnStart_Click" IsDefault="True" IsEnabled="False"/>
 		<Button x:Name="btnStop" Content="Stop" HorizontalAlignment="Left" Margin="90,41,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False" Click="btnStop_Click"/>
-		<Button x:Name="btnRemoteConnect" Content="Connect " HorizontalAlignment="Left" Margin="446,41,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False" Click="btnRemoteConnect_Click"/>
+		<Button x:Name="btnRemoteConnect" Content="Connect " HorizontalAlignment="Left" Margin="451,14,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False" Click="btnRemoteConnect_Click"/>
 		<TextBox x:Name="txtChatWindow" HorizontalAlignment="Left" Height="309" Margin="10,68,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="516" VerticalScrollBarVisibility="Auto" IsReadOnly="True" IsReadOnlyCaretVisible="True">
 			<TextBox.BorderBrush>
 				<LinearGradientBrush EndPoint="0,20" MappingMode="Absolute" StartPoint="0,0">
@@ -30,6 +30,8 @@
 		<TextBlock x:Name="txtStatus" HorizontalAlignment="Left" Margin="115,444,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="464"/>
 		<TextBox x:Name="txtFriendsList" HorizontalAlignment="Left" Height="426" Margin="531,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="169" IsReadOnlyCaretVisible="True" IsReadOnly="True"/>
 		<Button x:Name="btnChangeNick" Content="Change Nick" HorizontalAlignment="Left" Margin="251,10,0,0" VerticalAlignment="Top" Width="86" IsEnabled="False"/>
+		<TextBox x:Name="txtPort" HorizontalAlignment="Left" Height="23" Margin="457,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="69"/>
+		<Label Content=":" HorizontalAlignment="Left" Margin="445,39,0,0" VerticalAlignment="Top"/>
 
 	</Grid>
 </Window>
